sdk/v0.3/fireworks.mdx
---
title: "pixeltable.functions.fireworks"
sidebarTitle: "fireworks"
icon: "square-m"
---

Pixeltable [UDFs](https://pixeltable.readme.io/docs/user-defined-functions-udfs) that wrap various endpoints from the Fireworks AI API. In order to use them, you must first `pip install fireworks-ai` and configure your Fireworks AI credentials, as described in the [Working with Fireworks](https://pixeltable.readme.io/docs/working-with-fireworks) tutorial.


<a href="https://github.com/pixeltable/pixeltable/blob/v0.3/pixeltable/functions/fireworks.py#L0" target="_blank">View source on GitHub</a>

## UDFs


---

### `chat_completions()` <sub>udf</sub>

Creates a model response for the given chat conversation.


Equivalent to the Fireworks AI `chat/completions` API endpoint. For additional details, see: [https://docs.fireworks.ai/api-reference/post-chatcompletions](https://docs.fireworks.ai/api-reference/post-chatcompletions)

Request throttling: Applies the rate limit set in the config (section `fireworks`, key `rate_limit`). If no rate limit is configured, uses a default of 600 RPM.

**Requirements:**

- `pip install fireworks-ai`


**Signature:**

```python
chat_completions(
    messages: Json,
    model: String,
    max_tokens: Optional[Int],
    top_k: Optional[Int],
    top_p: Optional[Float],
    temperature: Optional[Float],
    request_timeout: Optional[Int]
)-> Json
```

**Parameters:**

- **`messages`** (*Json*): A list of messages comprising the conversation so far.
- **`model`** (*String*): The name of the model to use.

**Returns:**

- *Json*: A dictionary containing the response and other metadata.



**Example:**

Add a computed column that applies the model `accounts/fireworks/models/mixtral-8x22b-instruct` to an existing Pixeltable column `tbl.prompt` of the table `tbl`:
```python
messages = [{'role': 'user', 'content': tbl.prompt}]
tbl.add_computed_column(response=chat_completions(messages, model='accounts/fireworks/models/mixtral-8x22b-instruct'))
```

